@@ -1,4 +1,4 @@
-MANIFEST for cm_tools, version t19950921
+MANIFEST for cm_tools, version t19960705
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for CM_TOOLS
